# claude-code-proxy

./: .dockerignore  .env.example  .gitattributes  CLAUDE.md  Dockerfile  Makefile  README.md  docker-build.sh  docker-compose-start.sh  docker-compose.yaml  docker-compose.yml  docker-push.sh  pyproject.toml  server.py  setup.sh  test_qwen.py  tests.py
src/: config.py  logging_config.py  models.py  server.py  utils.py
src/copilot/: auth.py  call.py  raw.sh  utils.py
